fixed another layout bug
Specifically when the window is small and the user clicks on the hamburger and resized the window to be larger with the nav bar open, the nav bar would stay to the left of the window instead of being positioned next to the main content.

--- a/docs/_includes/extra/styles.scss
+++ b/docs/_includes/extra/styles.scss
@@ -1,7 +1,7 @@
 
 @media (min-width: 1280px) {
     .sidebar-wrap, .addons-wrap {
-        left: calc(50vw - 640px);
+        left: calc(50vw - 640px) !important;
     }
     .content-wrap {
         width: 980px;
